--- a/config/database.yml
+++ b/config/database.yml
@@ -3,9 +3,13 @@ development:
   encoding: unicode
   database: myflix_development
   pool: 5
+  username: emperorliu
+  password: 
 
 test:
   adapter: postgresql
   encoding: unicode
   database: myflix_test
   pool: 5
+  username: emperorliu
+  password: 
