--- a/spec/cassettes/StripeWrapper/StripeWrapper_Charge/_create/returns_error_message_for_declined_cards.yml
+++ b/spec/cassettes/StripeWrapper/StripeWrapper_Charge/_create/returns_error_message_for_declined_cards.yml
@@ -31,11 +31,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Fri, 12 Dec 2014 21:53:03 GMT
+      - Tue, 30 Dec 2014 03:24:23 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '624'
+      - '711'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -47,7 +47,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_eyrckOuOIAELbbx4
+      - req_XOuwk7Oi4w030UM2
       Stripe-Version:
       - '2014-11-20'
       Strict-Transport-Security:
@@ -56,14 +56,14 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1591LPJGSn3Q2fvTyQAqXA2k",
+          "id": "tok_15FGcNJGSn3Q2fvTO7NjeYr4",
           "livemode": false,
-          "created": 1418421183,
+          "created": 1419909863,
           "used": false,
           "object": "token",
           "type": "card",
           "card": {
-            "id": "card_1591LPJGSn3Q2fvT50MjCtp0",
+            "id": "card_15FGcNJGSn3Q2fvT00a8HW0v",
             "object": "card",
             "last4": "0119",
             "brand": "Visa",
@@ -79,18 +79,21 @@ http_interactions:
             "address_state": null,
             "address_zip": null,
             "address_country": null,
+            "cvc_check": null,
+            "address_line1_check": null,
+            "address_zip_check": null,
             "dynamic_last4": null,
             "customer": null
           }
         }
     http_version: 
-  recorded_at: Fri, 12 Dec 2014 21:54:51 GMT
+  recorded_at: Tue, 30 Dec 2014 03:27:49 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: US-ASCII
-      string: amount=999&currency=usd&card=tok_1591LPJGSn3Q2fvTyQAqXA2k&description=An%20invalid%20charge.
+      string: amount=999&currency=usd&card=tok_15FGcNJGSn3Q2fvTO7NjeYr4&description=An%20invalid%20charge.
     headers:
       Accept:
       - "*/*; q=0.5, application/xml"
@@ -116,7 +119,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Fri, 12 Dec 2014 21:53:04 GMT
+      - Tue, 30 Dec 2014 03:24:24 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
@@ -132,7 +135,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_vbmGMQEqT7vGb6yc
+      - req_kgoiVkxluDuZgmNE
       Stripe-Version:
       - '2014-11-20'
     body:
@@ -143,9 +146,9 @@ http_interactions:
             "message": "An error occurred while processing your card. Try again in a little bit.",
             "type": "card_error",
             "code": "processing_error",
-            "charge": "ch_1591LPJGSn3Q2fvTffIbDLDS"
+            "charge": "ch_15FGcOJGSn3Q2fvTbiu02544"
           }
         }
     http_version: 
-  recorded_at: Fri, 12 Dec 2014 21:54:51 GMT
+  recorded_at: Tue, 30 Dec 2014 03:27:50 GMT
 recorded_with: VCR 2.9.3
