--- a/spec/cassettes/user_invites_friend/user_invites_a_friend_and_the_invitation_is_accepted.yml
+++ b/spec/cassettes/user_invites_friend/user_invites_a_friend_and_the_invitation_is_accepted.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.stripe.com/v1/charges
+    uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: amount=999&currency=usd&card=tok_158VAAJGSn3Q2fvTJoNVaWfC&description=Sign%20up%20charge%20for%20sean%40gmail.com
+      string: card=tok_15FGxdJGSn3Q2fvTLNCMPbMH&email=sean%40gmail.com&plan=basicplanid
     headers:
       Accept:
       - "*/*; q=0.5, application/xml"
@@ -22,7 +22,7 @@ http_interactions:
         Jeffreys-Air 14.0.0 Darwin Kernel Version 14.0.0: Fri Sep 19 00:26:44 PDT
         2014; root:xnu-2782.1.97~2/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '113'
+      - '73'
   response:
     status:
       code: 200
@@ -31,11 +31,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 11 Dec 2014 11:31:19 GMT
+      - Tue, 30 Dec 2014 03:46:22 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '1325'
+      - '2313'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -47,7 +47,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_EBNiMjPuxHynNkY8
+      - req_LYguTwiF4PaAqZH6
       Stripe-Version:
       - '2014-11-20'
       Strict-Transport-Security:
@@ -56,60 +56,92 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "ch_158VABJGSn3Q2fvT1aW7yr5Z",
-          "object": "charge",
-          "created": 1418297479,
+          "object": "customer",
+          "created": 1419911182,
+          "id": "cus_5Q7Ca2btVc9cfH",
           "livemode": false,
-          "paid": true,
-          "amount": 999,
-          "currency": "usd",
-          "refunded": false,
-          "captured": true,
-          "refunds": {
-            "object": "list",
-            "total_count": 0,
-            "has_more": false,
-            "url": "/v1/charges/ch_158VABJGSn3Q2fvT1aW7yr5Z/refunds",
-            "data": []
-          },
-          "card": {
-            "id": "card_158VAAJGSn3Q2fvTzrOAPiaO",
-            "object": "card",
-            "last4": "4242",
-            "brand": "Visa",
-            "funding": "credit",
-            "exp_month": 7,
-            "exp_year": 2015,
-            "fingerprint": "rNhPRcdSCrZC1EIl",
-            "country": "US",
-            "name": null,
-            "address_line1": null,
-            "address_line2": null,
-            "address_city": null,
-            "address_state": null,
-            "address_zip": null,
-            "address_country": null,
-            "cvc_check": "pass",
-            "address_line1_check": null,
-            "address_zip_check": null,
-            "dynamic_last4": null,
-            "customer": null
-          },
-          "balance_transaction": "txn_158VABJGSn3Q2fvTMtXsKd7i",
-          "failure_message": null,
-          "failure_code": null,
-          "amount_refunded": 0,
-          "customer": null,
-          "invoice": null,
-          "description": "Sign up charge for sean@gmail.com",
-          "dispute": null,
+          "description": null,
+          "email": "sean@gmail.com",
+          "delinquent": false,
           "metadata": {},
-          "statement_description": null,
-          "fraud_details": {},
-          "receipt_email": null,
-          "receipt_number": null,
-          "shipping": null
+          "subscriptions": {
+            "object": "list",
+            "total_count": 1,
+            "has_more": false,
+            "url": "/v1/customers/cus_5Q7Ca2btVc9cfH/subscriptions",
+            "data": [
+              {
+                "id": "sub_5Q7CbOs7uIyASq",
+                "plan": {
+                  "interval": "month",
+                  "name": "basicplan",
+                  "created": 1419367762,
+                  "amount": 999,
+                  "currency": "usd",
+                  "id": "basicplanid",
+                  "object": "plan",
+                  "livemode": false,
+                  "interval_count": 1,
+                  "trial_period_days": null,
+                  "metadata": {},
+                  "statement_descriptor": null,
+                  "statement_description": null
+                },
+                "object": "subscription",
+                "start": 1419911182,
+                "status": "active",
+                "customer": "cus_5Q7Ca2btVc9cfH",
+                "cancel_at_period_end": false,
+                "current_period_start": 1419911182,
+                "current_period_end": 1422589582,
+                "ended_at": null,
+                "trial_start": null,
+                "trial_end": null,
+                "canceled_at": null,
+                "quantity": 1,
+                "application_fee_percent": null,
+                "discount": null,
+                "tax_percent": null,
+                "metadata": {}
+              }
+            ]
+          },
+          "discount": null,
+          "account_balance": 0,
+          "currency": "usd",
+          "cards": {
+            "object": "list",
+            "total_count": 1,
+            "has_more": false,
+            "url": "/v1/customers/cus_5Q7Ca2btVc9cfH/cards",
+            "data": [
+              {
+                "id": "card_15FGxdJGSn3Q2fvTBoqJfZQW",
+                "object": "card",
+                "last4": "4242",
+                "brand": "Visa",
+                "funding": "credit",
+                "exp_month": 7,
+                "exp_year": 2015,
+                "fingerprint": "rNhPRcdSCrZC1EIl",
+                "country": "US",
+                "name": null,
+                "address_line1": null,
+                "address_line2": null,
+                "address_city": null,
+                "address_state": null,
+                "address_zip": null,
+                "address_country": null,
+                "cvc_check": "pass",
+                "address_line1_check": null,
+                "address_zip_check": null,
+                "dynamic_last4": null,
+                "customer": "cus_5Q7Ca2btVc9cfH"
+              }
+            ]
+          },
+          "default_card": "card_15FGxdJGSn3Q2fvTBoqJfZQW"
         }
     http_version: 
-  recorded_at: Thu, 11 Dec 2014 11:32:58 GMT
+  recorded_at: Tue, 30 Dec 2014 03:49:48 GMT
 recorded_with: VCR 2.9.3
